--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -55,10 +55,10 @@
 					<div class="square-menu__item">Colecciones <span class="number">{{data[3].works + data[4].products}}</span></div>
 				</div>
 				<div class="square-menu__element">
-					<div class="square-menu__item">Siguiendo <span class="number">{{data[5].followers}}</span></div>
+					<div class="square-menu__item">Seguidores <span class="number">{{data[5].followers}}</span></div>
 				</div>
 				<div class="square-menu__element">
-					<div class="square-menu__item">Seguidores <span class="number">{{data[6].followings}}</span></div>
+					<div class="square-menu__item">Siguiendo <span class="number">{{data[6].followings}}</span></div>
 				</div>
 			</div>
 		</div>
