--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 
+
+<h1>{{ product.name }}</h1>
+<h1>{{ product.price }}</h1>
+<img src="{{ product.photo }}" width="300"/>
+<br/>
+<a href="/checkout"><button>comprar</button></a>
 </body>
 </html>
