--- a/public/css/market.css
+++ b/public/css/market.css
@@ -280,6 +280,13 @@ html {
   letter-spacing: 0.5px;
   line-height: 1em;
 }
+.single-product-text {
+  font-family: 'Oswald';
+  font-size: 1.75rem;
+  color: #585858;
+  letter-spacing: 1px;
+  line-height: 1em;
+}
 .facebook-button {
   color: #fff;
   display: table-cell;
