--- a/public/css/single-product.css
+++ b/public/css/single-product.css
@@ -570,7 +570,7 @@ html {
 .single-product {
   max-width: 1100px;
   margin: auto;
-  padding: 0.5rem;
+  padding: 0.75rem 0.5rem;
 }
 .single-product__title {
   text-align: center;
@@ -597,6 +597,7 @@ html {
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center;
+  padding: 0 0.5rem;
 }
 .single-product__artist .avatar {
   max-width: 2rem;
@@ -609,12 +610,23 @@ html {
 .single-product__artist .name {
   font-style: italic;
 }
-.single-product__info__image .actions,
-.single-product__info__actions .actions {
-  min-width: 200px;
+.single-product__info {
+  padding: 0.5rem 0;
 }
-.single-product__info__image .actions .actions__social,
-.single-product__info__actions .actions .actions__social {
+.single-product__info max-width,
+.single-product__info__image {
+  padding: 0.5rem;
+}
+.single-product__info max-width img,
+.single-product__info__image img {
+  max-width: 300px;
+  margin: auto;
+  display: block;
+}
+.single-product__info__actions {
+  padding: 0.5rem;
+}
+.single-product__info__actions .actions__social {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -633,15 +645,14 @@ html {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-  padding: 0.5rem;
 }
-.single-product__info__image .actions .actions__social .price,
-.single-product__info__actions .actions .actions__social .price {
-  background: #00f;
+.single-product__info__actions .price {
+  font-family: 'Raleway';
+  font-size: 1.5rem;
+  font-weight: 700;
 }
-.single-product__info__image .actions .actions__buy,
-.single-product__info__actions .actions .actions__buy {
-  padding: 0.5rem;
+.single-product__info .actions__buy {
+  margin-top: 1rem;
 }
 @media (min-width: 590px) {
   .single-product__header {
@@ -678,8 +689,22 @@ html {
     -webkit-align-items: center;
     align-items: center;
   }
+  .single-product__info__image {
+    -webkit-box-flex: 2;
+    -moz-box-flex: 2;
+    -o-box-flex: 2;
+    box-flex: 2;
+    -webkit-flex: 2;
+    -ms-flex: 2;
+    flex: 2;
+  }
   .single-product__info__actions {
-    border: solid 1px #ccc;
-    padding: 0.5rem;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
   }
 }
