--- a/public/stylus/single-product.styl
+++ b/public/stylus/single-product.styl
@@ -17,7 +17,7 @@
 .single-product
 	max-width max-width
 	margin auto
-	padding .5rem
+	padding .75rem .5rem
 
 	&__title
 		text-align center
@@ -25,10 +25,11 @@
 		
 	&__artist
 		font-family 'Roboto Condensed'
-		letter-spacing: 1px;
+		letter-spacing 1px
 		display flex
 		align-items center
 		justify-content center
+		padding 0 .5rem
 		.avatar
 			max-width 2rem
 			margin 0 .5em
@@ -36,21 +37,51 @@
 				border-radius 50%
 		.name
 			font-style italic
+				
 	&__info
-		// display flex
+		padding .5rem 0
+		max-width
 		&__image
+			padding .5rem
+			img
+				max-width 300px
+				margin: auto;
+				display: block;
 		&__actions
-			.actions
-				min-width 200px
-				.actions__social
-					display flex
-					justify-content: space-between;
-					align-items center
-					padding .5rem
-					.price
-						background blue
-				.actions__buy
-					padding .5rem
+			padding .5rem
+			.actions__social
+				display flex
+				justify-content space-between
+				align-items center
+				// .like
+					// padding .5rem
+				.price
+					font-family 'Raleway'
+					font-size 1.5rem
+					font-weight 700
+					
+			.actions__buy
+				margin-top 1rem
+
+	// 	// display flex
+	// 	&__image
+	// 		padding 2rem
+	// 		// background red
+	// 		img
+	// 			padding .5rem
+			// .actions
+				// min-width 200px
+				// .actions__social
+				// 	display flex
+				// 	justify-content: space-between;
+				// 	align-items center
+				// 	padding .5rem
+				// 	.price
+				// 		font-family 'Raleway'
+				// 		font-size 1.75rem
+				// 		font-weight 700
+				// .actions__buy
+				// 	padding .5rem
 										
 @media (min-width: tablet)
 	.single-product
@@ -61,6 +92,11 @@
 			display flex
 			justify-content center
 			align-items center
+			&__image
+				flex 2
 			&__actions
-				border solid 1px #ccc
-				padding .5rem
+				flex 1
+				// border solid 1px #ccc
+				// padding .5rem
+				// .actions
+				// 	background green
