single product layout

--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -29,23 +29,62 @@
 				<img src="{{product.photo}}">
 			</figure>
 			
-			<div class="single-product__info__actions">
-				<div class="actions__social">
+			<div class="single-product__info__data">
+				
+				<div class="actions">
+					<div class="actions__social">
 
-					<span class="like">
-						<button class="button-liner">
-							<div class="button-liner__action">Likes</div>
-							<div class="button-liner__number">{{product.likes}}</div>
-						</button>
-					</span>
+						<span class="like">
+							<button class="button-liner">
+								<div class="button-liner__action">Likes</div>
+								<div class="button-liner__number">{{product.likes}}</div>
+							</button>
+						</span>
 
-					<span class="price">$ {{product.price}}</span>
+						<span class="price">$ {{product.price}}</span>
+
+					</div>
+					<div class="actions__buy">
+						<button class="button-solid" data-size='large' data-color='red' data-expand='true'>Comprar</button>
+					</div>
+
+					<div class="actions__people">
+						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist3.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist4.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist3.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist4.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist3.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist4.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist3.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist4.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist3.jpg"></div>
+						<div class="people-item"><img src="/img/artists/artist4.jpg"></div>
+					</div>
 
 				</div>
-				<div class="actions__buy">
-					<button class="button-solid" data-size='large' data-color='red' data-expand='true'>Comprar</button>
-				</div>
+
+<!-- 				<div class="people">
+					<figure class="people__item"><img src="/img/artists/artist1.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist2.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist3.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist4.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist1.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist2.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist3.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist4.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist1.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist2.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist3.jpg"></figure>
+					<figure class="people__item"><img src="/img/artists/artist4.jpg"></figure>
+				</div> -->
+
 			</div>
+
 
 		</div>
 	</div>
