--- a/public/css/single-product.css
+++ b/public/css/single-product.css
@@ -570,7 +570,7 @@ html {
 .single-product {
   max-width: 1100px;
   margin: auto;
-  padding: 0.75rem 0.5rem;
+  padding: 1rem 0.5rem;
 }
 .single-product__title {
   text-align: center;
@@ -579,6 +579,7 @@ html {
 .single-product__artist {
   font-family: 'Roboto Condensed';
   letter-spacing: 1px;
+  font-size: 1.15rem;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -611,7 +612,7 @@ html {
   font-style: italic;
 }
 .single-product__info {
-  padding: 0.5rem 0;
+  padding: 1rem 0;
 }
 .single-product__info max-width,
 .single-product__info__image {
@@ -623,10 +624,10 @@ html {
   margin: auto;
   display: block;
 }
-.single-product__info__actions {
+.single-product__info__data .actions {
   padding: 0.5rem;
 }
-.single-product__info__actions .actions__social {
+.single-product__info__data .actions .actions__social {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -646,13 +647,42 @@ html {
   -webkit-align-items: center;
   align-items: center;
 }
-.single-product__info__actions .price {
+.single-product__info__data .actions .actions__social .price {
   font-family: 'Raleway';
   font-size: 1.5rem;
   font-weight: 700;
 }
-.single-product__info .actions__buy {
-  margin-top: 1rem;
+.single-product__info__data .actions .actions__buy {
+  margin: 1rem 0;
+}
+.single-product__info__data .actions .actions__people {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.single-product__info__data .actions .actions__people .people-item {
+  padding: 0.1rem;
+}
+.single-product__info__data .actions .actions__people .people-item img {
+  width: 2.5rem;
+  height: 2.5rem;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
 }
 @media (min-width: 590px) {
   .single-product__header {
@@ -688,6 +718,8 @@ html {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
+    max-width: 800px;
+    margin: auto;
   }
   .single-product__info__image {
     -webkit-box-flex: 2;
@@ -698,7 +730,7 @@ html {
     -ms-flex: 2;
     flex: 2;
   }
-  .single-product__info__actions {
+  .single-product__info__data {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
     -o-box-flex: 1;
@@ -706,5 +738,10 @@ html {
     -webkit-flex: 1;
     -ms-flex: 1;
     flex: 1;
+  }
+  .single-product__info__data .actions {
+    border: solid 1px #ccc;
+    margin: 0.5rem;
+    padding: 1rem;
   }
 }
