--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -241,12 +241,18 @@
 	font-size .85em
 	letter-spacing 1px
 	font-family 'Roboto Condensed'
+	cursor pointer
+	.fa-heart
+		color #f54545
+		display none
 
 .button-like
 .button-wish-list
 	&.active
-		color #ccc
-
+		.fa-heart
+			display inline
+		.fa-heart-o
+			display none
 
 /*------------------------------------*
 	$ BUTTON LIKED
