--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -123,38 +123,13 @@
 						<div class="product-social">
 							<div class="price">${{product.price}}</div>
 							<div class="like">
-								<span class="button-like"> <i class="fa fa-heart-o"></i> <i class="fa fa-heart"></i> <span>{{product.likes}}</span> </span>
-							</div>
-							<!-- <div class="wish-list">
-								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
-							</div> -->
-						</div>
-
-						<!-- <div class="product__featured">
-							{% if user %}
-								
-								{% if product.featured %}
-									<span id="{{ product.id }}" class="button-featured admin unfeatured" data-size='small'>
-										<div class="button-featured__inner"><i class="fa fa-star"></i></div>
-									</span>
+								{% if product.liked %}
+									<span class="button-like active"> <i class="fa fa-heart-o"></i> <i class="fa fa-heart"></i> <span>{{product.likes}}</span> </span>
 								{% else %}
-									<span id="{{ product.id }}" class="button-featured admin disabled featured" data-size='small'>
-										<div class="button-featured__inner"><i class="fa fa-star"></i></div>
-									</span>
+									<span class="button-like"> <i class="fa fa-heart-o"></i> <i class="fa fa-heart"></i> <span>{{product.likes}}</span> </span>
 								{% endif %}
-
-
-							{% else %}
-
-								{% if product.featured %}
-									<span id="{{ product.id }}" class="button-featured" data-size='small'>
-										<div class="button-featured__inner"><i class="fa fa-star"></i></div>
-									</span>
-								{% endif %}
-
-							{% endif %}
-						</div> -->
-
+							</div>
+						</div>
 					</article>
 				</div>
 				{% endfor %}
@@ -217,31 +192,14 @@
 				</div>
 				<div class="product-social">
 					<div class="like">
-						<span class="button-like"> <i class="fa fa-heart-o"></i> <span>{{likes}}</span> </span>
-					</div>
-					<div class="wish-list">
-						<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
-					</div>
-				</div>
 
-				<div class="product__featured">
-					<% if (user) { %>
-						<% if (featured) { %>
-							<span id="<%= id %>" class="button-featured admin unfeatured" data-size='small'>
-							<div class="button-featured__inner"><i class="fa fa-star"></i></div>
-							</span>
+						<% if (liked) { %>
+							<span class="button-like active"> <i class="fa fa-heart-o"></i> <i class="fa fa-heart"></i> <span>{{product.likes}}</span> </span>
 						<% } else { %>
-							<span id="<%= id %>" class="button-featured admin disabled featured" data-size='small'>
-							<div class="button-featured__inner"><i class="fa fa-star"></i></div>
-							</span>
+							<span class="button-like"> <i class="fa fa-heart-o"></i> <i class="fa fa-heart"></i> <span>{{product.likes}}</span> </span>
 						<% } %>
-					<% } else { %>
-						<% if (featured) { %>
-							<span id="<%= id %>" class="button-featured" data-size='small'>
-							<div class="button-featured__inner"><i class="fa fa-star"></i></div>
-							</span>
-						<% } %>
-					<% } %>
+
+					</div>
 				</div>
 
 			</article>
@@ -283,38 +241,38 @@
 	<script src="/js/market.js"></script>
 
 	<script>
-        $(document).on("click", ".featured", function (event) {
-            var scope = $(this);
-            $.ajax({
-                type: "POST",
-                url: "/user/work/featured/",
-                data: {idWork: scope.attr('id')},
-                success: function (data) {
-                    if (data.code == 202) {
-												// scope.html('<i class="fa fa-star"></i>&nbsp;Recomendado');
-												scope.removeClass('featured').addClass('unfeatured').removeClass('disabled');
-                    }
-                    console.log(data);
-                }
-            });
-            return false;
-        });
-        $(document).on("click", ".unfeatured", function (event) {
-            var scope = $(this);
-            $.ajax({
-                type: "POST",
-                url: "/user/work/unfeatured/",
-                data: {idWork: scope.attr('id')},
-                success: function (data) {
-                    if (data.code == 202) {
-												// scope.html('<i class="fa fa-star"></i>&nbsp;Recomendar');
-												scope.removeClass('unfeatured').addClass('featured').addClass('disabled');
-                    }
-                    console.log(data);
-                }
-            });
-            return false;
-        });
+        // $(document).on("click", ".featured", function (event) {
+        //     var scope = $(this);
+        //     $.ajax({
+        //         type: "POST",
+        //         url: "/user/work/featured/",
+        //         data: {idWork: scope.attr('id')},
+        //         success: function (data) {
+        //             if (data.code == 202) {
+								// 				// scope.html('<i class="fa fa-star"></i>&nbsp;Recomendado');
+								// 				scope.removeClass('featured').addClass('unfeatured').removeClass('disabled');
+        //             }
+        //             console.log(data);
+        //         }
+        //     });
+        //     return false;
+        // });
+        // $(document).on("click", ".unfeatured", function (event) {
+        //     var scope = $(this);
+        //     $.ajax({
+        //         type: "POST",
+        //         url: "/user/work/unfeatured/",
+        //         data: {idWork: scope.attr('id')},
+        //         success: function (data) {
+        //             if (data.code == 202) {
+								// 				// scope.html('<i class="fa fa-star"></i>&nbsp;Recomendar');
+								// 				scope.removeClass('unfeatured').addClass('featured').addClass('disabled');
+        //             }
+        //             console.log(data);
+        //         }
+        //     });
+        //     return false;
+        // });
 	</script>
 
 {% endblock %}
@@ -326,3 +284,32 @@
 
 	//	localhost:3000/username(logeado)/product/featured
 	//	localhost:3000/username(logeado)/product/unfeatured -->
+
+							<!-- <div class="wish-list">
+								<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+							</div> -->
+
+													<!-- <div class="product__featured">
+							{% if user %}
+								
+								{% if product.featured %}
+									<span id="{{ product.id }}" class="button-featured admin unfeatured" data-size='small'>
+										<div class="button-featured__inner"><i class="fa fa-star"></i></div>
+									</span>
+								{% else %}
+									<span id="{{ product.id }}" class="button-featured admin disabled featured" data-size='small'>
+										<div class="button-featured__inner"><i class="fa fa-star"></i></div>
+									</span>
+								{% endif %}
+
+
+							{% else %}
+
+								{% if product.featured %}
+									<span id="{{ product.id }}" class="button-featured" data-size='small'>
+										<div class="button-featured__inner"><i class="fa fa-star"></i></div>
+									</span>
+								{% endif %}
+
+							{% endif %}
+						</div> -->
