--- a/public/css/single-product.css
+++ b/public/css/single-product.css
@@ -109,8 +109,8 @@ html {
 }
 .thick-menu__item {
   color: #000;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
   display: table-cell;
 }
 .thick-menu__item:not(:first-child) {
@@ -120,7 +120,7 @@ html {
   padding-right: 1rem;
 }
 .carousel-thick-menu {
-  height: 2rem;
+  height: 2.5rem;
   overflow: hidden;
   max-width: 1100px;
   margin: auto;
@@ -402,10 +402,20 @@ html {
   font-size: 0.85em;
   letter-spacing: 1px;
   font-family: 'Roboto Condensed';
+  cursor: pointer;
 }
-.button-like.active,
-.button-wish-list.active {
-  color: #ccc;
+.button-like .fa-heart,
+.button-wish-list .fa-heart {
+  color: #f54545;
+  display: none;
+}
+.button-like.active .fa-heart,
+.button-wish-list.active .fa-heart {
+  display: inline;
+}
+.button-like.active .fa-heart-o,
+.button-wish-list.active .fa-heart-o {
+  display: none;
 }
 .button-liked {
   color: rgba(170,170,170,0.5);
@@ -601,7 +611,7 @@ html {
   padding: 0 0.5rem;
 }
 .single-product__artist .avatar {
-  max-width: 2rem;
+  max-width: 2.5rem;
   margin: 0 0.5em;
 }
 .single-product__artist .avatar img {
@@ -679,8 +689,8 @@ html {
   padding: 0.1rem;
 }
 .single-product__info__data .actions .actions__people .people-item img {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2.25rem;
+  height: 2.25rem;
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
