--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -49,7 +49,12 @@
 					</div>
 
 					<div class="actions__people">
-						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
+
+						{% for userLike in product.userLikes %}
+							<p>holi!</p>
+						{% endfor %}
+
+<!-- 						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
 						<div class="people-item"><img src="/img/artists/artist3.jpg"></div>
 						<div class="people-item"><img src="/img/artists/artist4.jpg"></div>
 						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
@@ -64,7 +69,7 @@
 						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
 						<div class="people-item"><img src="/img/artists/artist3.jpg"></div>
 						<div class="people-item"><img src="/img/artists/artist4.jpg"></div>
-					</div>
+ -->					</div>
 
 				</div>
 
