order price in works

--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -96,6 +96,8 @@
 				<div class="filter js-order" data-value="popularity">Más popular</div>
 				<div class="filter js-order" data-value="views">Más visto</div>
 				<div class="filter js-order" data-value="newest">Más reciente</div>
+				<div class="filter js-order" data-value="price_asc">Menor precio</div>
+				<div class="filter js-order" data-value="price_desc">Mayor precio</div>
 			</div>
 			<div class="filters">
 				<div class="filters__title">Tiempo</div>
