--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -51,7 +51,8 @@
 					<div class="actions__people">
 
 						{% for userLike in product.userLikes %}
-							<p>holi!</p>
+							<div class="people-item"><img src="{{userLike.photo}}"></div>
+
 						{% endfor %}
 
 <!-- 						<div class="people-item"><img src="/img/artists/artist2.jpg"></div>
