add lodash to utils

--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -40,10 +40,10 @@
 		<div class="filters-menu__search">
 			<div class="search">
 				<i class="fa fa-search"></i>
-				<input class="js-searcher" type="text" placeholder="Busca Productos por Titulo o Tag">
+				<input class="js-searcher" type="text" placeholder="Busca Productos por Nombre">
 			</div>
 			<ul class="search-options js-search-options">
-				<li class="search-option" data-search='title'>Buscar Titulo: <span class="search-text"></span></li>
+				<li class="search-option" data-search='title'>Buscar Nombre: <span class="search-text"></span></li>
 				<!-- <li class="search-option" data-search='tag'>Buscar Tag: <span class="search-text"></span></li> -->
 			</ul>
 		</div>
